--- a/client/style.css
+++ b/client/style.css
@@ -1,9 +1,28 @@
-body {
-    background: #e7e7e7
+body, html {
+    background: #e7e7e7;
+    padding: 0px;
+    margin: 0px;
+    font-family: Verdana, Geneva, Tahoma, sans-serif;
 }
 
-.player{
-    background: yellow;
+.header{
+    background: #fff;
+    padding: 10px;
+}
+h1 {
+    margin: 0px;
+    margin-bottom: 10px;
+}
+.game {
+    width: 100%;
+    height: 400px;
+    background: #dbf3ee ;
+    border: 3px #999 solid;
+    border-right: none;
+    border-left: none;
+}
+.sprite{
+    background-color: yellow;
     transform: rotate(90deg);
     border-radius: 50%;
     height: 50px;
@@ -13,8 +32,6 @@ body {
     font-weight: bold;
     font-size: 28px;
     position: fixed;
-    left: 100px;
-    top: 200px;
   }
 
   button, input {
@@ -25,6 +42,11 @@ body {
   }
   input {
     background: #fff;
+  }
+
+  button#wsButton{
+      background: green; color: white;
+      font-weight: bold;
   }
 
   .controller{
@@ -54,6 +76,7 @@ body {
       top: 64px;
       left: 20px;
       border-right: none;
+
   }
   .controller #upArrow {
     position: absolute;
