--- a/client/style.css
+++ b/client/style.css
@@ -15,11 +15,12 @@ h1 {
 }
 .game {
     width: 100%;
-    height: 400px;
+    height: 500px;
     background: #dbf3ee ;
     border: 3px #999 solid;
     border-right: none;
     border-left: none;
+    position: relative;
 }
 .sprite{
     background-color: yellow;
@@ -31,7 +32,18 @@ h1 {
     line-height: 200%;
     font-weight: bold;
     font-size: 28px;
-    position: fixed;
+    position: absolute;
+  }
+
+  .name-tag {
+      position: absolute;
+      transform: rotate(-90deg);
+      top: 0px;
+      font-size: 8px;
+      width: 100%;
+      text-align: center;
+      left: -34px;
+      overflow: hidden;
   }
 
   button, input {
