--- a/client/style.css
+++ b/client/style.css
@@ -32,6 +32,7 @@ h1 {
     font-weight: bold;
     font-size: 22px;
     position: absolute;
+    overflow: hidden;
   }
   .sprite span {
      transform: rotate(90deg);
