--- a/client/style.css
+++ b/client/style.css
@@ -32,13 +32,16 @@ h1 {
     font-weight: bold;
     font-size: 22px;
     position: absolute;
-    overflow: hidden;
   }
   .sprite span {
      transform: rotate(90deg);
      position: absolute;
      top: 2px;
-     left: 10px;  
+     left: 10px;
+     overflow: hidden;
+     display: block;
+     width: 70%;
+     height: 100%;  
   }
     .sprite.sprite-move-down span{ 
         top: 8px;
