--- a/client/style.css
+++ b/client/style.css
@@ -72,7 +72,7 @@ h1 {
       background: rgb(0, 255, 76);
       width: 3px;
       position: absolute;
-      left: -5px;
+      right: -6px;
   }
   button, input {
       background: #CCC;
