--- a/client/style.css
+++ b/client/style.css
@@ -16,7 +16,7 @@ h1 {
 .game {
     width: 100%;
     height: 500px;
-    background: #dbf3ee ;
+    background: #692566 ;
     border: 3px #999 solid;
     border-right: none;
     border-left: none;
